--- a/TyrianClone-android/bin/AndroidManifest.xml
+++ b/TyrianClone-android/bin/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
 
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+	<uses-feature
+    android:name="android.hardware.sensor.accelerometer"
+    android:required="true" />
 
     <application
         android:icon="@drawable/ic_launcher"
